put pages behind a login wall

--- a/src/app/components/playstyle/playstyle.component.html
+++ b/src/app/components/playstyle/playstyle.component.html
@@ -21,7 +21,10 @@
 </div>
 
 <ng-template #login>
-    <div class="container text-center text-light">
-      <h2>You are not logged in.</h2>
+    <div class="container text-light text-center">
+      <div class="row justify-content-center">
+        <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
+      </div>
     </div>
+    <app-login></app-login>
   </ng-template>
