--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -52,7 +52,7 @@
 <div *ngIf="expanded == true" class="container justify-content-center text-light">
   <div class="col-md-4 col-centered">
     <div class="row">
-      <h2 class="text-light" style="text-align:center">You have sucessfully created an account!</h2>
+      <h2 class="text-light" style="text-align:center">You have successfully created an account!</h2>
     </div>
 
     <a routerLink="/login">
