--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -22,6 +22,9 @@
         <span class="text-danger" *ngIf="(email.dirty || email.touched) && email.invalid && email.errors.required">
           Email is required.
       </span>
+      <span class="text-danger" *ngIf="email.errors?.pattern">
+        Invalid email.
+    </span>
       </div>
 
       <div class="form-group">
