--- a/src/app/components/surveys/surveys.component.html
+++ b/src/app/components/surveys/surveys.component.html
@@ -10,11 +10,11 @@
       </div>
 
       <div class="row justify-content-center">
-        <div *ngFor="let survey of surveys" class="card col-3 m-4" style="width: 18rem;">
+        <div *ngFor="let room of rooms" class="card col-3 m-4" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Game: {{ survey.game.name }}</h5>
+            <h5 class="card-title">Game: {{ room.game.name }}</h5>
             <h5 class="card-title">Player: </h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ survey.created | date:'short' }}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{ room.created | date:'short' }}</h6>
             <!-- <div *ngFor="let skill of skills" class="card-text">
               <span>{{ skill.name }}</span>
               <span></span>
