--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,10 +9,13 @@
       <div class="col-6 text-center mt-5">
         <h2>Join Games,</h2>
         <h2>Build Soft Skills!</h2>
+        <h5 class="text-primary">*Microphone Required</h5>
         <a routerLink="/about" class="btn btn-outline-light text-light m-2">Learn more</a>
       </div>
       <div class="col-6 mt-5">
-        <h3>Players Online:</h3>
+        <h2>See Our List of</h2>
+        <h2>Supported Games:</h2>
+        <a routerLink="/supported-games" class="btn btn-outline-light text-light m-2">Games</a>
       </div>
     </div>
 </div>
