--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
         <span class="m-2">
           <a routerLink="/dashboard">Dashboard</a>
         </span>
+        <span class="m-2">
+          <a routerLink="/profile">Profile</a>
+        </span>
         <a (click)="logout()" class="btn btn-outline-light text-light m-2">Logout</a>
       </div>
 
