--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center text-light">
+<div class="container text-center text-light" style="width: 60%;">
     <div class="row justify-content-center mt-3">
       <div class="col">
         <h1>{{title}}</h1>
@@ -8,14 +8,15 @@
     <div class="row mt-5">
       <div class="col-6 text-center mt-5">
         <h2>Join Games,</h2>
+        <h2>Make Friends,</h2>
         <h2>Build Soft Skills!</h2>
-        <h5 class="text-primary">*Microphone Required</h5>
         <a routerLink="/about" class="btn btn-outline-light text-light m-2">Learn more</a>
       </div>
-      <div class="col-6 mt-5">
-        <h2>See Our List of</h2>
-        <h2>Supported Games:</h2>
-        <a routerLink="/supported-games" class="btn btn-outline-light text-light m-2">Games</a>
+
+      <div class="col-6">
+        <div style="font-size: 150px;"><fa-icon [icon]="faDiscord"></fa-icon></div>
+        <h5 class="text-primary">*Microphone Required</h5>
       </div>
+
     </div>
 </div>
