--- a/src/app/components/create-room/create-room.component.html
+++ b/src/app/components/create-room/create-room.component.html
@@ -24,9 +24,9 @@
 
             <div class="col-md-6">
               <div class="input-group">
-                <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search games...">
+                <input type="text" class="form-control border-right-0 border" [(ngModel)]="searchText" placeholder="Search games...">
                 <div class="input-group-append">
-                  <span class="input-group-text" id="searchIcon"><fa-icon [icon]="faSearch"></fa-icon></span>
+                  <span class="input-group-text bg-white border-left-0 border" id="searchIcon"><fa-icon [icon]="faSearch"></fa-icon></span>
                 </div>
               </div>
 
