--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user$ | async; else login" class="container text-center text-light">
+<div *ngIf="user$ | async; else login" class="container text-center text-light" style="width: 60%;">
     <div class="row justify-content-center mt-3">
       <div class="col">
         <h1>Welcome, {{ (user$ | async)?.playerUsername }}</h1>
