--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -17,7 +17,10 @@
           <tbody>
               <tr *ngFor="let skill of skills">
                 <td [class]="skill.value > 150 ? 'text-success' : 'text-light'">{{ skill.skill.name }}</td>
-                <td [class]="skill.value > 150 ? 'text-success' : 'text-light'">{{ skill.value | number:'3.1' }}</td>
+                <td [class]="skill.value > 150 ? 'text-success' : 'text-light'">
+                  <span>{{ skill.value | number:'3.1' }}</span>
+                  <span *ngIf="skill.value > 150" class="ml-2"><fa-icon [icon]="faAward"></fa-icon></span>
+                </td>
               </tr>
           </tbody>
         </table>
