--- a/src/app/components/about-g2-g/about-g2-g.component.html
+++ b/src/app/components/about-g2-g/about-g2-g.component.html
@@ -8,10 +8,10 @@
     <div class="row justify-content-center mt-4">
       <div class="col-8 text-left mt-5">
         <p>Game to Gain (G2G) is a video game matchmaking service that aims to foster the growth
-            of players' soft skills in a low pressure environment. Players are
-            be able to create or join game rooms, where they will be automatically connected to
-            a private Discord voice channel to communicate with their team. Players are urged to 
-            help each other improve by providing feedback on their team memembers' soft skills and
+            of players' soft skills in a low pressure environment. Players are 
+            able to create or join game rooms, where they will be automatically connected to
+            a Discord voice channel to communicate with their team. Players are urged to 
+            help each other improve by providing feedback on their team members' soft skills and
             technical skills. Join the G2G community today!
         </p>
       </div>
