--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,26 +1,30 @@
 <div *ngIf="user$ | async; else login" class="container text-center text-light" style="width: 60%;">
     <div class="row justify-content-center mt-3">
       <div class="col">
-        <h1>Welcome, {{ (user$ | async)?.playerUsername }}</h1>
+        <h1>Welcome, {{ (user$ | async)?.playerUsername }}!</h1>
         <hr>
       </div>
     </div>
 
-    <div class="row mt-5">
-      <div class="col-6 text-center mt-5">
-        <h2>Join An Existing Room</h2>
-        <a routerLink="/playstyle" class="btn btn-secondary text-light m-2">Join Room</a>
+    <div class="row mt-2">
+      <div class="col-6 mt-5">
+        <div class="jumbotron bg-dark">
+          <h2>Join An Existing Room</h2>
+          <a routerLink="/playstyle" class="btn btn-secondary text-light m-2">Join Room</a>
+        </div>
       </div>
 
       <div class="col-6 mt-5">
-        <h2>Create A New Room</h2>
-        <a routerLink="/create-room" class="btn btn-primary text-light m-2">Create Room</a>
+        <div class="jumbotron bg-dark">
+          <h2>Create A New Room</h2>
+          <a routerLink="/create-room" class="btn btn-primary text-light m-2">Create Room</a>
+        </div>
       </div>
     </div>
 
-    <div class="row mt-5 justify-content-center">
-      <div class="col-6 text-center mt-5">
-        <h5>Provide Team Feedback</h5>
+    <div class="row mt-3 justify-content-center">
+      <div class="col-6 text-center">
+        <h5 class="text-light">Provide Team Feedback</h5>
         <a routerLink="/surveys" class="btn btn-outline-light text-light m-1">Surveys</a>
       </div>
     </div>
