--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="user$ | async; else login" class="container text-center text-light" style="width: 60%;">
+<div *ngIf="user" class="container text-center text-light" style="width: 60%;">
     <div class="row justify-content-center mt-3">
       <div class="col">
-        <h1>Welcome, {{ (user$ | async)?.playerUsername }}!</h1>
+        <h1>Welcome, {{ user.playerUsername }}!</h1>
         <hr>
       </div>
     </div>
@@ -30,11 +30,11 @@
     </div>
 </div>
 
-<ng-template #login>
+<div *ngIf="(user === undefined) && isLoaded">
   <div class="container text-light text-center">
     <div class="row justify-content-center">
       <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
     </div>
   </div>
   <app-login></app-login>
-</ng-template>
+</div>
