--- a/src/app/components/playstyle/playstyle.component.html
+++ b/src/app/components/playstyle/playstyle.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user; else login">
+<div *ngIf="user">
 
     <div class="container text-center text-light">
         <div class="row justify-content-center mt-3">
@@ -20,11 +20,11 @@
     
 </div>
 
-<ng-template #login>
+<div *ngIf="(user === undefined) && isLoaded">
     <div class="container text-light text-center">
       <div class="row justify-content-center">
         <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
       </div>
     </div>
     <app-login></app-login>
-  </ng-template>
+  </div>
