--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="user; else login" class="container text-center text-light">
+<div *ngIf="user" class="container text-center text-light">
     <div class="row justify-content-center mt-3">
       <div class="col">
-        <h1>{{ (user$ | async)?.playerUsername }}'s Skills</h1>
+        <h1>{{ user.playerUsername }}'s Skills</h1>
         <hr>
       </div>
     </div>
@@ -28,15 +28,13 @@
         </table>
       </div>
     <br/>
-
-
 </div>
 
-<ng-template #login>
+<div *ngIf="(user === undefined) && isLoaded">
   <div class="container text-light text-center">
     <div class="row justify-content-center">
       <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
     </div>
   </div>
   <app-login></app-login>
-</ng-template>
+</div>
