--- a/src/app/components/surveys/surveys.component.html
+++ b/src/app/components/surveys/surveys.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user; else login">
+<div *ngIf="user">
     <div class="container justify-content-center">
       <div class="row justify-content-center mt-3">
         <div class="col text-center text-light">
@@ -18,14 +18,6 @@
             <div class="alert alert-danger">{{ failureMessage }}</div>
         </div>
       </div>
-
-      <!-- <div *ngIf="success == false && failure == false">
-        <div class="row justify-content-center">
-            <div class="alert alert-warning">Your feedback helps the G2G community build their soft skills. 
-              View your profile to see how you've been ranked.
-            </div>
-        </div>
-      </div> -->
 
       <div *ngFor="let roomSurvey of roomSurveySet"  class="row justify-content-center">
         <div *ngFor="let survey of roomSurvey.surveySet" class="card col-3 m-4" style="width: 18rem;">
@@ -60,11 +52,11 @@
     </div>
 </div>
 
-<ng-template #login>
+<div *ngIf="(user === undefined) && isLoaded">
   <div class="container text-light text-center">
     <div class="row justify-content-center">
       <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
     </div>
   </div>
   <app-login></app-login>
-</ng-template>
+</div>
