--- a/src/app/components/create-room/create-room.component.html
+++ b/src/app/components/create-room/create-room.component.html
@@ -18,10 +18,7 @@
       <div class="col-lg-6">
         <div class="text-left">
           <div class="row">
-            <div class="col-md-6">
-              <!-- <h3 class="text-light">Search all games:</h3> -->
-            </div>
-
+            <div class="col-md-6"></div>
             <div class="col-md-6">
               <div class="input-group">
                 <input type="text" class="form-control border-right-0 border" [(ngModel)]="searchText" placeholder="Search games...">
@@ -29,7 +26,6 @@
                   <span class="input-group-text bg-white border-left-0 border" id="searchIcon"><fa-icon [icon]="faSearch"></fa-icon></span>
                 </div>
               </div>
-
             </div>    
           </div>
         </div>
