--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </ul>
       
 
-      <div *ngIf="user | async as jsonUser; else login">
+      <div *ngIf="user; else login">
         <span class="m-2">
           <button routerLink="/dashboard" class="btn bg-transparent text-primary">
             <div><fa-icon [icon]="faHome" class="mr-2"></fa-icon>Dashboard</div>
@@ -18,7 +18,7 @@
         </span>
         <span class="m-2">
           <button routerLink="/profile" class="btn bg-transparent text-primary">
-            <div><fa-icon [icon]="faUser" class="mr-2"></fa-icon>Profile</div>
+            <div><fa-icon [icon]="faUser" class="mr-2"></fa-icon>{{ user.playerUsername }}</div>
           </button>
         </span>
         <a (click)="logout()" class="btn btn-outline-light text-light m-2">Logout</a>
