added games icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
 
       <ul class="nav nav-tabs mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/supported-games">Games</a>
+          <button class="nav-link bg-transparent text-primary" routerLink="/supported-games">
+            <div><fa-icon [icon]="faGamepad" class="mr-2"></fa-icon>Games</div>
+          </button>
         </li>
       </ul>
       
