--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -46,12 +46,12 @@
       <table class="table table-hover">
         <thead>
           <tr>
-            <th scope="col">Playstyle</th>
-            <th scope="col"># of Players</th>
-            <th scope="col">Max Players</th>
-            <th scope="col">Game</th>
-            <th scope="col">Room Name</th>
-            <th scope="col"></th>
+            <th style="width:15%" scope="col">Playstyle</th>
+            <th style="width:10%" scope="col"><fa-icon [icon]="faUsers"></fa-icon></th>
+            <th style="width:10%" scope="col"><fa-icon [icon]="faUserLock"></fa-icon></th>
+            <th style="width:25%" scope="col">Game</th>
+            <th style="width:25%"scope="col">Room Name</th>
+            <th style="width:10%" scope="col"></th>
           </tr>
         </thead>
         <tbody>
