fixed non bootstrap sonarcloud bugs

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,10 +8,11 @@
 
     <div class="row justify-content-center">
         <table class="table table-hover w-auto" style="width: 50%">
+          <caption>Table of player's skills and skill levels</caption>
           <thead>
             <tr>
-              <th style="width: 25%">Skill</th>
-              <th style="width: 15%">Score</th>
+              <th style="width: 25%" scope="col">Skill</th>
+              <th style="width: 15%" scope="col">Score</th>
             </tr>
           </thead>
           <tbody>
