--- a/src/app/components/create-room/create-room.component.html
+++ b/src/app/components/create-room/create-room.component.html
@@ -32,6 +32,7 @@
         <br>
         <div class="table-wrap">
           <table class="table table-hover" id="gameTable">
+            <caption>Table of game names and descriptions.</caption>
             <thead class="thead-light">
               <th scope="col">Name</th>
               <th scope="col">Description</th>
