--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -44,6 +44,7 @@
 
     <div class="row justify-content-center">
       <table class="table table-hover">
+        <caption>Table of available rooms</caption>
         <thead>
           <tr>
             <th style="width:15%" scope="col">Playstyle</th>
