mobile friendly work

--- a/src/style/g2gColors.scss
+++ b/src/style/g2gColors.scss
@@ -7,5 +7,7 @@ $theme-colors: (
         "warning":#ff652f,
         "info":#1bffdf,
         "light":#F5EAE9,
-        "dark":#1f2833
+        "dark":#1f2833,
 );
+$body-bg:    #2a343f;
+$body-color: #fff;
