--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #fff;
   text-align: left;
   background-color: #2a343f;
 }
@@ -489,7 +489,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #2a343f;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1695,7 +1695,7 @@ pre code {
 }
 
 .table .table {
-  background-color: #fff;
+  background-color: #2a343f;
 }
 
 .table-sm th,
@@ -1876,7 +1876,7 @@ pre code {
 }
 
 .table .thead-dark th {
-  color: #fff;
+  color: #2a343f;
   background-color: #212529;
   border-color: #32383e;
 }
@@ -1888,7 +1888,7 @@ pre code {
 }
 
 .table-dark {
-  color: #fff;
+  color: #2a343f;
   background-color: #212529;
 }
 
@@ -2270,8 +2270,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(38, 193, 150, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(38, 193, 150, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(38, 193, 150, 0.25);
+          box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(38, 193, 150, 0.25);
 }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
@@ -2370,8 +2370,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
+          box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
 }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label, .custom-file-input.is-invalid ~ .custom-file-label {
@@ -3298,7 +3298,7 @@ tbody.collapse.show {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
+  color: #fff;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3762,8 +3762,8 @@ tbody.collapse.show {
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(80, 148, 217, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(80, 148, 217, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(80, 148, 217, 0.25);
+          box-shadow: 0 0 0 1px #2a343f, 0 0 0 0.2rem rgba(80, 148, 217, 0.25);
 }
 
 .custom-control-input:active ~ .custom-control-label::before {
@@ -4028,8 +4028,8 @@ tbody.collapse.show {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  background-color: #2a343f;
+  border-color: #dee2e6 #dee2e6 #2a343f;
 }
 
 .nav-tabs .dropdown-menu {
@@ -5348,7 +5348,7 @@ tbody.collapse.show {
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: #fff;
   background-color: #e9ecef;
 }
 
@@ -6039,7 +6039,7 @@ button.close {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: #fff;
 }
 
 .carousel {
