--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'style/g2gColors.scss';
 @import 'style/basicFormat.scss';
+@import 'style/g2g-flex.scss';
 /* You can add global styles to this file, and also import other style files */
 
 @import 'style/bootstrap-4.0.0/scss/bootstrap.scss';
