--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,19 @@
 <div class="text-center text-light">
-    <div class="row justify-content-center mt-3">
-      <div class="col">
+    <div class="justify-content-center mt-3">
+      <div>
         <h1>{{title}}</h1>
         <hr>
       </div>
     </div>
-    <div class="d-flex mt-5 flex-wrap justify-content-center">
-      <div class="text-center mt-5">
+    <div class="d-flex flex-wrap justify-content-center">
+      <div class="text-center mt-5 mx-3">
         <h2>Join Games,</h2>
         <h2>Make Friends,</h2>
         <h2>Build Soft Skills!</h2>
         <a routerLink="/about" class="btn btn-outline-light text-light m-2">Learn more</a>
       </div>
 
-      <div class="">
+      <div class="mx-3">
         <div style="font-size: 150px;"><fa-icon [icon]="faDiscord"></fa-icon></div>
         <h5 class="text-primary">*Microphone Required</h5>
       </div>
