--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+.g2g-flex-grow {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
 /* You can add global styles to this file, and also import other style files */
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
