--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,20 +1,19 @@
-<div *ngIf="user" class="container text-center text-light" style="width: 60%;">
-    <div class="row justify-content-center mt-3">
+<div *ngIf="user" class="text-center text-light d-flex flex-column">
+    <div class="justify-content-center mt-3">
       <div class="col">
         <h1>Welcome, {{ user.playerUsername }}!</h1>
         <hr>
       </div>
     </div>
 
-    <div class="row mt-2">
-      <div class="col-6 mt-5">
+    <div class="d-flex flex-wrap justify-content-center">
+      <div class="mt-3 mx-2">
         <div class="jumbotron bg-dark">
           <h2>Join An Existing Room</h2>
           <a routerLink="/playstyle" class="btn btn-secondary text-light m-2">Join Room</a>
         </div>
       </div>
-
-      <div class="col-6 mt-5">
+      <div class="mt-3 mx-2">
         <div class="jumbotron bg-dark">
           <h2>Create A New Room</h2>
           <a routerLink="/create-room" class="btn btn-primary text-light m-2">Create Room</a>
@@ -22,18 +21,18 @@
       </div>
     </div>
 
-    <div class="row mt-3 justify-content-center">
-      <div class="col-6 text-center">
+    <div class="mt-3 justify-content-center">
+      <div class="text-center">
         <h5 class="text-light">Provide Team Feedback</h5>
-        <a routerLink="/surveys" class="btn btn-outline-light text-light m-1">Surveys</a>
+        <a routerLink="/surveys" class="btn btn-outline-light text-light mb-3">Surveys</a>
       </div>
     </div>
 </div>
 
 <div *ngIf="(user === undefined) && isLoaded">
-  <div class="container text-light text-center">
-    <div class="row justify-content-center">
-      <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
+  <div class="text-light text-center">
+    <div class="justify-content-center">
+      <div class="alert alert-info mt-3 g2g-container-tight">You are not logged in.</div>
     </div>
   </div>
   <app-login></app-login>
