--- a/src/style/basicFormat.css
+++ b/src/style/basicFormat.css
@@ -1,1 +1,30 @@
-/* No CSS *//*# sourceMappingURL=basicFormat.css.map */
+.g2g-container {
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+.g2g-container-tight {
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+@media (min-width: 550px) and (orientation: landscape) {
+  .g2g-container {
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+  .g2g-container-tight {
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+}
+
+@media (min-width: 850px) and (orientation: landscape) {
+  .g2g-container {
+    margin-left: 3vw;
+    margin-right: 3vw;
+  }
+}
+/*# sourceMappingURL=basicFormat.css.map */
