--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="d-flex flex-column g2g-page-container">
   <nav class="navbar bg-dark d-flex flex-column">
-    <button (click)="showNav()" class="bg-transparent text-primary mr-auto btn" id="nav-toggle">Show Nav</button>
+    <button (click)="showNav()" class="bg-transparent text-primary mr-auto btn" id="nav-toggle">
+      <fa-icon [icon]="faBars"></fa-icon>
+    </button>
     <ul class="nav nav-tabs w-100 hidden" id="nav-items">
       <li>
         <button id="title" routerLink="/home" class="navbar-brand text-light bg-transparent btn">{{titleAbbreviated}}</button>
