--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,3 +1,17 @@
+.table {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 650px) {
+  .table {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 caption {
     color: transparent;
 }
