--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,13 +1,13 @@
-<div *ngIf="user" class="container text-center text-light">
-    <div class="row justify-content-center mt-3">
-      <div class="col">
+<div *ngIf="user" class="d-flex flex-column justify-content-center text-center text-light">
+    <div class="mt-3">
+      <div>
         <h1>{{ user.playerUsername }}'s Skills</h1>
         <hr>
       </div>
     </div>
 
-    <div class="row justify-content-center">
-        <table class="table table-hover w-auto" style="width: 50%">
+    <div class="d-flex flex-column justify-content-center">
+        <table class="table table-hover">
           <caption>Table of player's skills and skill levels</caption>
           <thead>
             <tr>
